La redirection sur chaque image de profile

--- a/sass/partials/_card-provider-featured.scss
+++ b/sass/partials/_card-provider-featured.scss
@@ -53,7 +53,7 @@
             gap: 1rem;
             border-bottom: 1px solid #DAE9F4;
             padding-bottom: 1.5rem;
-            color: white;
+            color: rgb(0, 0, 0);
 
             a {
                 display: flex;
