--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -602,7 +602,7 @@
 
 .service-page-main {
   background-color: #F5F8FC;
-  padding-bottom: 5rem;
+  padding-bottom: 9rem;
 }
 
 .service-page-profile-cards {
@@ -2545,7 +2545,18 @@
   width: 14rem;
   border-radius: 50%;
   margin: auto;
+  display: flex;
+  align-items: center;
+  place-content: center;
+  background-color: deepskyblue;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+}
+.card-provider .provider-profile a {
+  height: 14rem;
+  width: 14rem;
+  border-radius: 50%;
   border: solid 4px white;
+  margin: auto;
   display: flex;
   align-items: center;
   place-content: center;
@@ -2645,7 +2656,7 @@
   gap: 1rem;
   border-bottom: 1px solid #DAE9F4;
   padding-bottom: 1.5rem;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .card-provider-featured .provider-featured-details .provider-featured-social-icons a {
   display: flex;
