--- a/sass/partials/_card-provider.scss
+++ b/sass/partials/_card-provider.scss
@@ -11,12 +11,24 @@
         width: 14rem;
         border-radius: 50%;
         margin: auto;
-        border: solid 4px white;
         display: flex;
         align-items: center;
         place-content: center;
         background-color: deepskyblue;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+
+        a {
+            height: 14rem;
+            width: 14rem;
+            border-radius: 50%;
+            border: solid 4px white;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            place-content: center;
+            background-color: deepskyblue;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+        }
 
         img {
             object-fit: cover;
