--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -3,7 +3,7 @@
 @use 'service-description';
 @use 'provider';
 @use 'provider-profile';
-@use 'about_us';
+@use 'about';
 @use 'newsletter';
 @use 'settings';
 @use 'dashboard';
