--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,10 +4,12 @@
 
 {% block body %}
 {% if status == 'internetUsers' %}
-    {% set type = 'utilisateur' %}
+    {% set name = 'providers' %}
+    {% set type = 'prestataire' %}
 {% endif %}
 {% if status == 'providers' %}
-    {% set type = 'prestataire' %}
+    {% set name = 'internetUsers' %}
+    {% set type = 'utilisateur' %}
 {% endif %}
 <div class="register">
     <div class="register__container">
@@ -17,11 +19,7 @@
                 Vous avez déjà un identifiant Work Space ?
             </p>
             <a href="{{ path('app_login') }}">Connectez-vous ici ></a>
-            {% if status == 'internetUsers' %}
-                <a href="{{ path('app_register', {status: 'providers'}) }}">Créer votre identifiant comme prestataire ></a>
-            {% else %}
-                <a href="{{ path('app_register', {status: 'internetUsers'}) }}">Créer votre identifiant comme utilisateur ></a>
-            {% endif %}
+            <a href="{{ path('app_register', {status: name}) }}">Créer votre identifiant comme {{ type }} ></a>
         </div>
         <form action="{{ path('app_register', {status: status}) }}" method="post" class="register__form">
             {{ form_errors(registrationForm) }}
