--- a/sass/pages/_dashboard.scss
+++ b/sass/pages/_dashboard.scss
@@ -18,7 +18,7 @@
         .dashboard__profile-container {
             width: 25rem;
 
-            div {
+            > div {
                 height: 10rem;
                 width: 10rem;
                 overflow: hidden;
@@ -26,6 +26,15 @@
                 border: solid 4px white;
                 margin: 0 auto;
                 box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+                display: flex;
+                align-items: center;
+                place-content: center;
+                font-size: 5rem;
+                color: black;
+
+                span {
+                    padding-top: 1rem;
+                }
             }
         }
     }
