--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,7 +24,6 @@
         display: flex;
         flex-direction: row-reverse;
         gap: 5rem;
-        
 
         @media only screen and (max-width: 1440px) {
             gap: 3rem;
@@ -136,9 +135,10 @@
             margin-bottom: 40px;
             border: solid 1px white;
             box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+            
             &:hover {
-                background: rgb(218,234,245);
-                background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+                background: rgb(183,235,255);
+                background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
             }
         }
     }
@@ -173,8 +173,8 @@
             gap: 1rem;
 
             &:hover {
-                background: rgb(218,234,245);
-                background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+                background: rgb(183,235,255);
+                background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
             }
         }
     }
@@ -244,21 +244,33 @@
     }
 
     &__link {
-        background: inherit;
         display: block;
-        margin: 30px 0 0 auto;
+        align-items: center;
+        place-content: center;
+        align-items: center;
+        background: rgb(207,196,255);
+        background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+        margin-top: 5rem;
+        margin-left: auto;
+        border-radius: 1rem;
+        border: solid 1px white;
+        cursor: pointer;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+        font-size: 1.6rem;
+        gap: 1rem;
+        height: 4rem;
+        width: 25rem;
         
-        a {
+        &:hover {
+            background: rgb(183,235,255);
+            background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
+        }
+
+        span {
             display: flex;
             align-items: center;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            padding: .7rem 5rem .3rem;
-            border-radius: 1rem;
-            border: solid 1px white;
-            cursor: pointer;
-            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-            font-size: 1.6rem;
+            place-content: center;
+            padding-top: .5rem;
             gap: 1rem;
         }
     }
