--- a/sass/pages/_service-description.scss
+++ b/sass/pages/_service-description.scss
@@ -86,6 +86,9 @@
         text-align: justify;
     }
     &__contact-button {
+        display: flex;
+        align-items: center;
+        place-content: center;
         background: rgb(207,196,255);
         background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -96,6 +99,11 @@
         width: 20rem;
         position: absolute;
         top: 3rem;right: 0;
+
+        &:hover {
+            background: rgb(183,235,255);
+            background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
+        }
     }
     &__pdf-button {
         background-color: white;
