--- a/sass/pages/_settings.scss
+++ b/sass/pages/_settings.scss
@@ -1,6 +1,10 @@
 .user-settings {
+    position: relative;
     font-size: 1.4rem;
     
+    .error {
+        
+    }
     &__container {
         max-width: 1440px;
         width: calc(100% - 8rem);
