--- a/sass/partials/_card-promo.scss
+++ b/sass/partials/_card-promo.scss
@@ -1,6 +1,6 @@
 .sold-out {
     position: absolute;
-    top: 2rem;
+    top: 2rem;left: 0;
 }
 .card-service {
     flex: 0 1 31.5rem;
@@ -9,12 +9,6 @@
     box-shadow: rgba(223, 233, 245, 1) 0px 10px 10px;
     padding: 2rem;
     position: relative;
-
-    // .disabled {
-    //     pointer-events: none;
-    //     opacity: 0.2;
-    // }
-
 
     .card-service__header {
         display: flex;
@@ -100,20 +94,25 @@
             padding: 1.5rem 0;
         }
         .card-service__button {
+            display: flex;
+            align-items: center;
+            place-content: center;
+            height: 4rem;
+            width: 15rem;
+            margin: auto;
             color: #4F4D62;
             font-size: 1.4rem;
-            padding: 1.35rem 3.5rem 1.15rem;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            border-radius: 10px;
+            border-radius: 1rem;
             border: solid 1px white;
             cursor: pointer;
             box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
+            background: rgb(207,196,255);
+            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
 
     
             &:hover {
-                background: rgb(218,234,245);
-                background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+                background: rgb(183,235,255);
+                background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
             }
         }
     }
