--- a/sass/partials/_card-provider-featured.scss
+++ b/sass/partials/_card-provider-featured.scss
@@ -75,22 +75,27 @@
             font-weight: 300;
             color: #9B99A3;
             padding: 1.5rem 0;
+            height: 10.4rem;
         }
         .provider-featured-service-button {
+            display: flex;
+            align-items: center;
+            place-content: center;
             color: #4F4D62;
             font-size: 1.4rem;
-            padding: 1.35rem 3.5rem 1.15rem;
             background: rgb(207,196,255);
             background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            border-radius: 10px;
+            border-radius: 1rem;
             border: solid 1px white;
             cursor: pointer;
             box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
-
+            height: 4rem;
+            width: 15rem;
+            margin: auto;
     
             &:hover {
-                background: rgb(218,234,245);
-                background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+                background: rgb(183,235,255);
+                background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
             }
         }    
     }
