--- a/sass/partials/_card-provider.scss
+++ b/sass/partials/_card-provider.scss
@@ -54,15 +54,24 @@
     .provider-button {
         background-color: inherit;
     }
-    .provider-button a {
-        display: block;
+    .provider-button {
+        display: flex;
+        height: 4rem;
+        width: 12rem;
+        margin: auto;
+        align-items: center;
+        place-content: center;
         background: rgb(207,196,255);
         background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
         border-radius: 10px;
         border: solid 1px white;
         cursor: pointer;
         box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
-        padding: 1rem 2rem;
+
+        &:hover {
+            background: rgb(183,235,255);
+            background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
+        }
     }
 
     &:hover {
