--- a/sass/partials/_modal.scss
+++ b/sass/partials/_modal.scss
@@ -1,6 +1,6 @@
-.modal {
+.modal, .modal-error {
     position: fixed;
-    z-index: 1;
+    z-index: 10000;
     top: 0;left: 0;
     display: none;
     width: 100%;
@@ -20,6 +20,7 @@
         display: flex;
         gap: 1rem;
         height: fit-content;
+        z-index: 10000;
         
         > div {
             display: flex;
