--- a/templates/dashboard/_table.html.twig
+++ b/templates/dashboard/_table.html.twig
@@ -52,7 +52,7 @@
                             <a href="{{ path('app_dashboard_edit', {id: item.id, type: currentType}) }}">Edit</a>
                         </li>
                         <li>
-                            <form action="{{ path('app_dashboard_delete', {id: item.id, type: currentType}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <form action="{{ path('app_dashboard_delete', {id: item.id, type: currentType}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir supprimer cet élément ?');">
                                 <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
                                 <input type="submit" value="Delete">
                             </form>
