--- a/templates/partials/_btn-profile.html.twig
+++ b/templates/partials/_btn-profile.html.twig
@@ -1,7 +1,7 @@
-{% if app.user and app.user.providers.providerPhoto is defined and app.user and app.user.providers.providerPhoto is not null %}
+{% set name_image = false %}
+{% if app.user.providers.providerPhoto is defined and app.user.providers.providerPhoto is not null %}
     {% set name_image = app.user.providers.providerPhoto.name ? app.user.providers.providerPhoto.name %}
 {% endif %}
-
 {% if app.user.internetUsers.providerPhoto is defined and app.user.internetUsers.providerPhoto is not null %}
     {% set name_image = app.user.internetUsers.providerPhoto.name ? app.user.internetUsers.providerPhoto.name %}
 {% endif %}
@@ -17,7 +17,7 @@
 
 {% if app.user %}
     <div class="profile-button-container">
-        {% if name_image is defined %}
+        {% if name_image %}
         <div class="avatar-container">
             <img src="{{ asset('assets/uploads/' ~ fichier ~ name_image) }}" alt="">
         </div>
@@ -34,7 +34,7 @@
                 <a href="{{ path('app_providers_profile', {id: id}) }}">
                     <div class="profile-dropdown-item-icon">
                         <div>
-                        {% if name_image is defined %}
+                        {% if name_image %}
                             <img src="{{ asset('assets/uploads/' ~ fichier ~ name_image) }}" alt="">
                         {% else %}
                             <span>
