--- a/templates/partials/_search-bar.html.twig
+++ b/templates/partials/_search-bar.html.twig
@@ -1,4 +1,4 @@
-{% set category = app.request.get('categoryy') %}
+{# {% set category = app.request.get('categoryy') %} #}
 
 <form action="{{ path('app_providers') }}" method="GET" class="search-bar-form" id="search_bar">
     <div class="search-bar__items">
