--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -9,3 +9,103 @@
 <p>
     Cheers!
 </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        <style>
+            * {
+                box-sizing: border-box;
+            }
+            html {
+                font-size: 62.5%;
+            }
+            body {
+                margin: 0;
+            }
+            .email-confirm {
+                @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
+                font-family:  'Roboto', sans-serif;
+                text-align: justify;
+                display: flex;
+                align-items: center;
+                place-content: center;
+                height: 100vh;
+                background-color: #e4e3e3;
+            }
+            .container {
+                max-width: 60rem;
+                border-radius: 1rem;
+                background-color: white;
+                padding: 1rem 2rem;
+            }
+            .logo {
+                font-size: 3rem;
+                font-weight: 300;
+            }
+            .logo span {
+                font-weight: 900;
+                background-image: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+                -webkit-background-clip: text;
+                background-clip: text;
+                color: transparent;
+            }
+            p {
+                font-size: 1.6rem;
+            }
+            button {
+                border: none;
+                width: 100%;
+                height: 15rem;
+                border-radius: 1rem;
+                padding: 0 12rem;
+            }
+            a {
+                display: flex;
+                height: 5rem;
+                align-items: center;
+                justify-content: center;
+                text-decoration: none;
+                color: #4F4D62;
+                font-size: 1.4rem;
+                background: rgb(207,196,255);
+                background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+                border-radius: 1rem;
+                border: solid 1px white;
+                cursor: pointer;
+                box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
+            }
+            a:hover {
+                background: rgb(183,235,255);
+                background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
+            }
+        </style>
+</head>
+<body>
+    
+<div class="email-confirm">
+    <div class="container">
+        <div class="logo">
+            Bien<span>Être</span>
+        </div>
+        <p>
+            Félicitations pour votre inscription à notre plateforme ! Pour accéder à toutes les fonctionnalités de notre service, veuillez confirmer votre adresse e-mail en cliquant sur le lien ci-dessous.
+        </p>
+        <div class="btn">
+            <button>
+                <a href="{{ signedUrl|raw }}">VÉRIFIEZ MON ADRESSE E-MAIL</a>
+            </button>
+        </div>
+        <p>
+            Une fois votre adresse e-mail vérifiée, vous pourrez profiter de tous les avantages de notre plateforme, des promotions spéciales et bien plus encore.
+        </p>
+        <p>
+            N'hésitez pas à nous contacter si vous avez des questions ou des préoccupations. Merci de faire partie de notre communauté !
+        </p>
+    </div>
+</div>
+
+
+{# This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}. #}
+</body>
+</html>
